# workdup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  wd.example.toml
docker/: README.md
docker/grafana/dashboards/: workdup.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/prometheus/: prometheus.yml
src/: cleanup.rs  cli.rs  config.rs  db.rs  http.rs  logging.rs  main.rs  scanner.rs  temporal.rs  tokenizer.rs
