[package]
name = "workdup"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
temporalio-client = "0.4.0"
temporalio-common = "0.4.0"
temporalio-macros = "0.4.0"
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
sha2 = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-util = "0.7"
